--- a/rfc/4/comments/1.md
+++ b/rfc/4/comments/1.md
@@ -16,7 +16,7 @@ n/a
 
 RFC-4 defines anatomical orientation metadata.
 As currently written, it does not restrict this metadata to be present only on spatial axes.
-Because it does not make sense to define an anatomical orientation for non-spatial axes (e.g., channel or time axes), RFC4 should be updated to specific that anatomical orientation data can only be present on spatial axes.
+Because it does not make sense to define an anatomical orientation for non-spatial axes (e.g., channel or time axes), RFC4 should be updated to specify that anatomical orientation data can only be present on spatial axes.
 
 ## Minor comments and questions
 
